--- a/style.css
+++ b/style.css
@@ -1,13 +1,25 @@
+:root{
+    --left-offset: 0%;
+    --defualt-gray: hsl(198, 21%, 84%);
+    --darker-gray: hsl(198, 21%, 74%);
+    --default-white: #f5f5f5;
+    --content-gap: 30px;
+}
+
 body {
     font-family: tahoma, sans-serif;
     margin: 0;
+    background-color: var(--defualt-gray);
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 .header {
-    background-color: gray;
     padding: 30px;
-
+    background-color: var(--default-white);
     display: flex;
-    justify-content: center;
+    justify-content: first;
+    padding-left: var(--left-offset);
     align-items: center;
 
     .personal-info {
@@ -17,16 +29,49 @@ body {
     }
 
     .pfp {
-        width: 20%;
-        height: 20%;
+        width: 300px;
         border-radius: 50%;
     }
 
     .githubimg, .linkedinimg {
         width: 30px;
         height: 30px;
-        background-color: gray;
-        border-radius: 40%;
+        background-color: var(--darker-gray);
+        padding: 3px;
+        border-radius: 50%;
     }
 
+}
+
+.content {
+    flex: 1;                        /*Used for taking up the whole page, and keeping the header/footer at the top/bottom */
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    column-gap: var(--content-gap); /*Spacing between the columns */
+    padding-left: var(--left-offset);
+
+    .primary-col {
+        background-color: var(--defualt-gray);
+        border: 1px solid black;
+
+        .about-me, .projects, .experience {
+            background-color: var(--default-white);
+        }
+    }
+
+    .side-col {
+        background-color: var(--default-gray);
+        border: 1px solid black;
+
+        .education, .languages {
+            background-color: var(--default-white);
+        }
+    };
+
+}
+
+.footer {
+    background-color: var(--default-white);
+    padding: 30px;
 }
