--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     --darker-gray: hsl(198, 21%, 74%);
     --default-white: #f5f5f5;
     --content-gap: 30px;
+    --default-radius: 0.5rem;
 }
 
 .container {
@@ -23,7 +24,7 @@
     padding: 30px;
     background-color: var(--default-white);
     display: flex;
-    justify-content: first;
+    /* justify-content: first; */
     padding-left: calc(var(--sides-offset) - 7%);
     align-items: center;
 
@@ -37,15 +38,61 @@
         width: 300px;
         border-radius: 50%;
     }
+    
 
-    .githubimg, .linkedinimg {
-        width: 30px;
-        height: 30px;
-        background-color: var(--darker-gray);
-        padding: 3px;
-        border-radius: 50%;
+
+    /* Icon decorations */
+    .social-media-icon-list {
+        display: flex;
+        list-style: none;
+        gap: 1rem;
+        margin: 0px;
+        padding: 0px;
     }
-
+    .item a {
+        text-decoration: none;
+        width: 3.2rem;
+        height: 3.2rem;
+        background-color: var(--default-white);
+        border-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        z-index: 1;
+        border: 3px solid var(--default-white);
+        overflow: hidden;
+    }
+    .item a::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background: var(--bg-color);
+        z-index: 0;
+        scale: 1 0;
+        transform-origin: bottom;
+        transition: scale 0.5s ease;
+    }
+    .item:hover a::before {
+        scale: 1 1;
+    }
+    .icon {
+        font-size: 2rem;
+        color: hsl(203, 92%, 8%);
+        transition: 0.5s ease;
+        z-index: 2;
+    }
+    .item a:hover .icon {
+        color: #fff;
+        transform: rotateY(360deg);
+    }
+    .item:nth-child(1) {
+        --bg-color: hsl(203, 92%, 8%);
+    }
+    .item:nth-child(2) {
+        --bg-color: #0077b5;
+    }
 }
 
 
@@ -66,11 +113,26 @@
 .content-box {
     background-color: var(--default-white);
     padding: 10px;
+    border-radius: var(--default-radius);
 }
 
 .middle-element {
     margin-top: var(--content-gap);
     margin-bottom: var(--content-gap);
+}
+
+.contact-list {
+    list-style: none;
+    padding: 5px;
+
+    .contact-item {
+        padding: 5px;
+    }
+
+    .fa-contact {
+        padding-right: 5px;
+    }
+
 }
 
 
